--- a/app/assets/stylesheets/embed_styles.css.scss
+++ b/app/assets/stylesheets/embed_styles.css.scss
@@ -165,6 +165,14 @@ a {
   }
 }
 
+.checkbox-inline,
+.radio-inline {
+  cursor: pointer;
+  display: inline-block;
+  padding-right: 20px;
+  font-size: 1em;
+}
+
 .with-optional-blocks {
   @include clearfix;
 
@@ -420,6 +428,39 @@ a {
   background-color: $infoBackground;
   border-color: $infoBorder;
   color: $infoText;
+}
+
+//
+// Parking Notification fields
+//
+//
+
+#new-unregistered-parking-notification {
+  #selectEnteredAddress {
+    margin-top: 0.5rem;
+  }
+  .street-control {
+    clear: both;
+    float: none;
+    width: 100%;
+    input {
+      width: 436px;
+      max-width: 100%;
+    }
+  }
+  #address-fields {
+    .control-group {
+      margin-right: 16px;
+    }
+    .state-select {
+      clear: left;
+    }
+  }
+  .waitingOnLocationText {
+    padding: 1rem;
+    color: $infoText;
+    font-style: italic;
+  }
 }
 
 //
