--- a/app/views/organized/parking_notifications/show.html.haml
+++ b/app/views/organized/parking_notifications/show.html.haml
@@ -1,7 +1,9 @@
 .organized-page-header
   %h1
     = t(".parking_notification")
-
+  - if @parking_notification.bike_unregistered?
+    %h2
+      %em Parking notification was for an unregistered #{@bike.type}
 - # TODO: add translations
 .row
   .col-md-6
@@ -100,6 +102,7 @@
     Related Notifications
   = render partial: "/organized/parking_notifications/table", locals: { parking_notifications: @related_notifications, skip_bike: true, skip_map_cell: true }
 
-%h2.uncap.mt-4 Preview of email sent:
-.email-preview
-  <iframe src="#{email_organization_parking_notification_path(@parking_notification, organization_id: current_organization.to_param)}"></iframe>
+- if @parking_notification.send_message?
+  %h2.uncap.mt-4 Preview of email sent:
+  .email-preview
+    <iframe src="#{email_organization_parking_notification_path(@parking_notification, organization_id: current_organization.to_param)}"></iframe>
