--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -51,15 +51,24 @@
                   = link_to t(".org_bikes", org_name: passive_organization.short_name), organization_bikes_path(organization_id: passive_organization.to_param), class: "nav-link #{(on_bikes_path && !on_impound_bikes_path) ? 'active' : ''}"
                 - if passive_organization.enabled?("impound_bikes")
                   %li
-                    = link_to t(".org_impounded_bikes", org_name: passive_organization.short_name), organization_bikes_path(organization_id: passive_organization.to_param, search_impoundedness: "only_impounded"), class: "nav-link #{on_impound_bikes_path ? 'active' : ''}"
-                %li
-                  = active_link t(".add_a_bike"), new_organization_bike_path(passive_organization.to_param), class: "nav-link"
+                    = link_to t(".org_impounded_bikes", org_name: passive_organization.short_name), organization_bikes_path(organization_id: passive_organization.to_param, search_impoundedness: "only_impounded"), class: "nav-link #{on_impound_bikes_path ? 'active' : ''} secondary-item"
                 - if passive_organization.enabled?("show_partial_registrations")
                   %li
-                    = active_link t(".incomplete_registrations"), incompletes_organization_bikes_path(passive_organization.to_param), class: "nav-link"
+                    = active_link t(".incomplete_registrations"), incompletes_organization_bikes_path(passive_organization.to_param), class: "nav-link secondary-item"
+                - if passive_organization.show_multi_serial?
+                  %li
+                    = active_link t(".multi_serial_search"), multi_serial_search_organization_bikes_path(passive_organization.to_param), class: "nav-link secondary-item"
                 - if passive_organization.enabled?("show_recoveries") # I don't want to show a grayed link for this
                   %li
-                    = active_link t(".recoveries"), recoveries_organization_bikes_path(passive_organization.to_param), class: "nav-link"
+                    = active_link t(".recoveries"), recoveries_organization_bikes_path(passive_organization.to_param), class: "nav-link secondary-item"
+
+                - divider_below_add_bike = passive_organization.show_bulk_import? || passive_organization.lightspeed_pos? || passive_organization.enabled?("parking_notifications")
+                - new_bike_with_parking_notification = controller_name == "bikes" && action_name == "new" && @unregistered_parking_notification
+                - new_bike_active = "bikes" && action_name == "new" && !new_bike_with_parking_notification
+                %li
+                  = link_to t(".add_a_bike"), new_organization_bike_path(passive_organization.to_param), class: "nav-link #{new_bike_active ? "active" : ""}"
+                - if divider_below_add_bike
+                  %li.divider-nav-item
 
                 - if passive_organization.show_bulk_import?
                   %li
@@ -68,9 +77,11 @@
                 - if passive_organization.lightspeed_pos?
                   = active_link t(".lightspeed_integration_panel"), lightspeed_interface_path(organization_id: passive_organization&.id), class: "nav-link"
                 - if passive_organization.enabled?("parking_notifications")
-                  %li.divider-nav-item
                   %li
                     = active_link t(".parking_notifications"), organization_parking_notifications_path(organization_id: passive_organization.to_param), class: "nav-link"
+                  %li
+                    = link_to t(".parking_notification_unregistered"), new_organization_bike_path(passive_organization.to_param, parking_notification: true), class: "nav-link #{new_bike_with_parking_notification ? 'active' : ''} secondary-item"
+
                 - if passive_organization.enabled?("bike_stickers")
                   %li.divider-nav-item
                   %li
