omg that took way way longer than it should have

--- a/app/views/admin/stolen_bikes/edit.html.haml
+++ b/app/views/admin/stolen_bikes/edit.html.haml
@@ -3,14 +3,15 @@
 = render partial: "/admin/twitter_accounts/errored"
 
 %h3 Bike Images
-%ul.list-group.list-group-horizontal-sm.stolen-bike-image-editing-list-group
-  - @bike.public_images.each do |image|
-    %li.list-group-item
-      .text-center
-        = link_to "Delete image", admin_stolen_bike_path(@bike, public_image_id: image.id, update_action: "delete"), method: :put, action: "update", data: { confirm: "Are you sure you want to delete this image? This can not be undone" }, class: "text-danger small"
-      = link_to image_tag(image.image_url(:small)), image.image_url, target: "_blank"
-      .mt-2.text-center
-        = link_to "Regenerate alert using this image", admin_stolen_bike_path(@bike, public_image_id: image.id, update_action: "regenerate_alert_image"), method: :put, action: "update", class: "btn btn-sm btn-outline-info"
+.stolen-bike-image-editing-list-group-wrapper
+  %ul.list-group.list-group-horizontal.stolen-bike-image-editing-list-group#stolenBikeImageEditing
+    - @bike.public_images.each do |image|
+      %li.list-group-item
+        .text-center
+          = link_to "Delete image", admin_stolen_bike_path(@bike, public_image_id: image.id, update_action: "delete"), method: :put, action: "update", data: { confirm: "Are you sure you want to delete this image? This can not be undone" }, class: "text-danger small"
+        = link_to image_tag(image.image_url(:small)), image.image_url, target: "_blank"
+        .mt-2.text-center
+          = link_to "Regenerate alert using this image", admin_stolen_bike_path(@bike, public_image_id: image.id, update_action: "regenerate_alert_image"), method: :put, action: "update", class: "btn btn-sm btn-outline-info"
 
 
 - alert_image_versions = @bike&.current_stolen_record&.current_alert_image&.image&.versions || []
@@ -20,13 +21,29 @@
 - if alert_image_versions.blank?
   None
 - else
-  %ul.mb-4.list-group.list-group-horizontal-sm.stolen-bike-image-editing-list-group
-    - alert_image_versions.each do |name, image|
-      %li.list-group-item
-        = link_to image_tag(image.url.to_s), image.url.to_s, target: "_blank"
-        .mt-2.text-center
-          = name
+  .stolen-bike-image-editing-list-group-wrapper
+    %ul.mb-4.list-group.list-group-horizontal.stolen-bike-image-editing-list-group#promoted-images-display
+      - alert_image_versions.each do |name, image|
+        %li.list-group-item
+          = link_to image_tag(image.url.to_s), image.url.to_s, target: "_blank"
+          .mt-2.text-center
+            = name
 
+/ :coffeescript
+/   $(document).ready ->
+/     $group1 = $(".stolen-bike-image-editing-list-group").first()
+/     li1 = $group1.find("li")
+/     outer_width = li1.first().outerWidth() * li1.length + 60
+/     console.log(outer_width)
+/     $group1.css("width", "'" + li1.first().outerWidth() * li1.length + 60 + "px'")
+
+/ $(".stolen-bike-image-editing-list-group").each (index, group) ->
+/   $group = $(group)
+/   li = $group.find("li")
+/   outer_width = li.first().outerWidth() * li.length + 60
+/   console.log(outer_width)
+/   $group.css("width", "'" + li.first().outerWidth() * li.length + 60 + "px'")
+/   console.log($group.css("width", "'" + li.first().outerWidth() * li.length + 40 + "px'"))
 %hr
 
 - if @stolen_record.blank?
