--- a/app/views/admin/bikes/_theft_alert_images.html.haml
+++ b/app/views/admin/bikes/_theft_alert_images.html.haml
@@ -1,3 +1,15 @@
+%h3 Bike Images
+.stolen-bike-image-editing-list-group-wrapper
+  %ul.list-group.list-group-horizontal.stolen-bike-image-editing-list-group#stolenBikeImageEditing
+    - bike.public_images.each do |image|
+      %li.list-group-item
+        .text-center
+          = link_to "Delete image", admin_stolen_bike_path(bike, public_image_id: image.id, update_action: "delete"), method: :put, action: "update", data: { confirm: "Are you sure you want to delete this image? This can not be undone" }, class: "text-danger small"
+        = link_to image_tag(image.image_url(:small)), image.image_url, target: "_blank"
+        .mt-2.text-center
+          = link_to "Regenerate alert using this image", admin_stolen_bike_path(bike, public_image_id: image.id, update_action: "regenerate_alert_image"), method: :put, action: "update", class: "btn btn-sm btn-outline-info"
+
+
 - alert_image_versions = bike&.current_stolen_record&.current_alert_image&.image&.versions || []
 
 %h3.mt-4 Promoted Alert Images
@@ -5,61 +17,10 @@
 - if alert_image_versions.blank?
   None
 - else
-  .row.mt-4.mb-4
-    - alert_image_versions.each do |name, image|
-      .col-3.col-lg-2
-        = link_to image.url.to_s, target: "_blank" do
-          = image_tag image.url.to_s,
-            class: "ml-auto mr-auto",
-            style: "display: block; max-width: 150px; height: auto;"
-        .text-center= name
-    .col-3.col-lg-2
-      = button_tag "Update / Regenerate promoted alert image",
-        id: "js-alert-image-regenerate",
-        class: "btn btn-primary mb-4"
-
-- modal_body = capture_haml do
-  - first_image, *bike_images = bike.public_images
-
-  - if first_image.blank?
-    No images available
-  - else
-    = form_tag regenerate_alert_image_admin_stolen_bike_path(bike),
-      method: :patch, class: "alert-image-regenerate-form" do |f|
-      .modal-body.text-center
-        .row.mt-2.mb-4
-          = image_tag first_image.image_url(:small).to_s,
-            class: "js-alert-image-option m-2 ml-auto mr-auto",
-            style: "cursor: pointer; border: 5px solid #3498db;",
-            data: { public_image_id: first_image.id }
-        .row.mt-2.mb-4
-          - bike_images.to_a.each do |image|
-            = image_tag image.image_url(:small).to_s,
-              class: "js-alert-image-option m-2 ml-auto mr-auto",
-              style: "cursor: pointer; border: 5px solid #fff;",
-              data: { public_image_id: image.id }
-
-        = hidden_field_tag :public_image_id, first_image.id
-        = submit_tag "Update promoted alert images", class: "btn btn-primary btn-md m-auto"
-
-
-= render partial: "shared/modal",
-  locals: { title: "Select an image to use in the promoted alert", id: "chooseTheftAlertImageModal", modal_body: modal_body }
-
-:javascript
-  $("body").on("click", "#js-alert-image-regenerate", () => {
-    $("#chooseTheftAlertImageModal").modal("show");
-  })
-
-:javascript
-  $("body").on("click", ".js-alert-image-option", (e) => {
-    $selectedImage = $(e.target);
-
-    $form = $(e.target).closest("form");
-    $images = $form.find("img");
-    $images.attr("style", "cursor: pointer; border: 5px solid #fff;");
-
-    selectedImageId = $selectedImage.data("publicImageId")
-    $form.find("#public_image_id").val(selectedImageId)
-    $selectedImage.attr("style", "border: 5px solid #3498db;")
-  });
+  .stolen-bike-image-editing-list-group-wrapper
+    %ul.mb-4.list-group.list-group-horizontal.stolen-bike-image-editing-list-group#promoted-images-display
+      - alert_image_versions.each do |name, image|
+        %li.list-group-item
+          = link_to image_tag(image.url.to_s), image.url.to_s, target: "_blank"
+          .mt-2.text-center
+            = name
