--- a/app/views/organized/parking_notifications/show.html.haml
+++ b/app/views/organized/parking_notifications/show.html.haml
@@ -108,7 +108,7 @@
     Related Notifications
   = render partial: "/organized/parking_notifications/table", locals: { parking_notifications: @related_notifications, skip_bike: true, skip_map_cell: true }
 
-- if @parking_notification.send_message?
+- if @parking_notification.send_email?
   %h2.uncap.mt-4 Preview of email sent:
   .email-preview
     <iframe src="#{email_organization_parking_notification_path(@parking_notification, organization_id: current_organization.to_param)}"></iframe>
