--- a/app/views/organized/bikes/new_iframe.html.haml
+++ b/app/views/organized/bikes/new_iframe.html.haml
@@ -70,7 +70,7 @@
         %label Kind of notification
         - current_organization.parking_notification_kinds.each do |kind|
           %label.radio-inline
-            = n.radio_button :kind, kind, checked: kind == "appears_abandoned"
+            = n.radio_button :kind, kind, checked: kind == "appears_abandoned_notification"
             = ParkingNotification.kinds_humanized[kind.to_sym]
 
       .input-group
